Update bark method to change bark sound
Woof lala

--- a/Class_Dog.ipynb
+++ b/Class_Dog.ipynb
@@ -20,7 +20,7 @@
     "        self.name=name\n",
     "        self.age=age\n",
     "    def bark(self): #method\n",
-    "        #print(\"Woof!\")\n",
+    "        #print(\"Woof!LaLa\")\n",
     "        return \"woof!\"\n",
     "\n",
     "        \n",
