--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,30 +2,204 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "68f4c4db-fcb1-45af-b753-4cd0b3801a39",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing add.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%writefile add.py\n",
-    "import sys\n",
-    "#name = sys.argv[0]\n",
-    "num1 = float(sys.argv[1])\n",
-    "num2 = float(sys.argv[2])\n",
-    "\n",
-    "print(f\"The sum of the two numbers: {num1+num2} in {name}\")"
+    "import math\n",
+    "print(math.sqrt(16)) #Use the module prefix\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bc0a624-a9eb-4566-9755-e1ed000c95f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sqrt \n",
+    "print(sqrt(16)) \n",
+    "#Import the specific function if you don't want to type math.\n",
+    "#every time, you can pull that specific tool out of the box and put it directly into your workspace\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ed41d0b-58a5-41db-af41-df0c1d738579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math as m\n",
+    "print(m.sqrt(24))\n",
+    "#rename the module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86da5070-c18d-4037-a93f-ab2ad00e81cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "print(dir(math))\n",
+    "# it shows you every constant (like $pi$ or $e$) and every function (like sqrt, sin, or log) that the math module provides.\n",
+    "help(math.log2) # If you want to know what 'log2' does:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6381ab3-1b3b-438d-9754-2e261086fe13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(math.ceil)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c0093b9-bb87-4a91-a7b6-a270ea28fef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Goal: Calculate the area of a circle.\n",
+    "#Input: A radius $r = 7$.Requirement: Use the math.pi constant.Formula: $Area = \\pi r^2$\n",
+    "\n",
+    "import math\n",
+    "r=int(input(\"Enter a radius\"))\n",
+    "print(math.pi*math.pow(r,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed1f789e-c0cc-449f-8e61-dc094fc35a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(math.pow)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4ab65a7-3e64-411c-bf3c-422878ef684e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Quiz 2: The Integer Architect 🏗️Goal: In programming, we often need to round numbers in specific directions. \n",
+    "#    Use two different functions from dir(math) to handle the number $9.7$.\n",
+    "#    Round it up to the nearest integer (should result in $10$).\n",
+    "#    Round it down to the nearest integer (should result in $9$).\n",
+    "a=9.7\n",
+    "print(\"$\",math.ceil(a))\n",
+    "print(\"$\",math.floor(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54396535-7745-4c43-8fa3-11ab3f3a0214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Quiz 3: The Right Triangle (Hypotenuse) \n",
+    "#Goal: Find the distance between two points, or the longest side of a right triangle.\n",
+    "#Input: Side $a = 3$, Side $b = 4$.Requirement: Look through your dir(math) list for a function that calculates the hypotenuse directly\n",
+    "#(it's much faster than doing $a^2 + b^2$ manually!).Formula: $c = \\sqrt{a^2 + b^2}$\n",
+    "a=3\n",
+    "b=4\n",
+    "c=math.sqrt(math.pow(a,2)+math.pow(b,2))\n",
+    "print(c)\n",
+    "print(math.hypot(a,b)) \n",
+    "#hypot is a specialized function used to calculate the longest side of a right-angled triangle with other 2 sides."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "79e56e97-c0e3-4a5c-9734-6a841f463e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Choose the shape : Circle, Rectangle, Triangle circle\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "while True: \n",
+    "    your_shape=input(\"Choose the shape : Circle, Rectangle, Triangle\",)\n",
+    "    if your_shape.capitalize() in [\"Circle\", \"Rectangle\", \"Triangle\"]: \n",
+    "        break\n",
+    "    print(\"That shape is not in our list. Try agian\")\n",
+    "if your_shape.capitalize() == \"Circle\":\n",
+    "    r=float(input(\"Radius?:\"))\n",
+    "    print(\"The area of circle is\",round(math.pow(r,2)*math.pi,1))\n",
+    "if your_shape.capitalize() == \"Rectangle\":\n",
+    "    w=float(input(\"Width?\"))\n",
+    "    l=float(input(\"lenght?\"))\n",
+    "    print(\"The area of ractangle is\",round(w*l,1))\n",
+    "if your_shape.capitalize() == \"Triangle\":\n",
+    "    b=float(input(\"Base?\"))\n",
+    "    h=float(input(\"Height?\"))\n",
+    "    print(\"The area of triangle is\",round(b*h/2,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "53289505-57e6-4d73-b1b1-41ba621aeb1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Input two numbers.: 5 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a program that asks for two numbers and divides them.\n",
+    "#Handle:\n",
+    "#- ValueError\n",
+    "#- ZeroDivisionError\n",
+    "#- Any unexpected error\n",
+    "try:\n",
+    "    y_n1,y_n2 = map(float,input(\"Input two numbers.:\").split())\n",
+    "    print(y_n1/y_n2)\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"You can't divide by zero!\")\n",
+    "except ValueError:\n",
+    "    print(\"That's not a valid number.\")\n",
+    "except Exception as e:\n",
+    "    print(\"An unexpected error occurred:\",e)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3b38dc-507b-455b-bdb5-4ab7db5f8359",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -33,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -47,9 +221,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
